Enhance theme handling by adding initialization state to prevent flickering during theme loading. Update ThemeToggleBtn, ThemeVideo, PageHeader, and ChartCard components to conditionally render based on theme initialization. Refactor theme context to manage theme state more effectively and ensure consistent theme application across the application.

--- a/components/PageHeader/PageHeader.scss
+++ b/components/PageHeader/PageHeader.scss
@@ -1,7 +1,7 @@
 @import "../../app/globals.scss";
 
 .pageHeader-section {
-    padding: 40px 20px;
+    padding: 20px;
 
     @media (max-width : "767px") {
         padding: 20px;
